<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditLocalFavoritePlaceActivity">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_edit_fav_place_local_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_choose_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/choose_icon"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageView
                android:id="@+id/btn_edit_fav_place_local_choose_icon"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:onClick="onSelectIconClicked"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_choose_icon"
                android:contentDescription="@string/content_desc_selected_icon_for_current_favorite"
                android:transitionName="recycler_item_icon_transition"
                />


            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                android:textStyle="bold"
                android:textAlignment="viewStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_edit_fav_place_local_choose_icon"
                />


            <!-- content description would mask hint according to code inspection -->
            <!--android:contentDescription="@string/content_desc_edit_fav_name"-->
            <EditText
                android:id="@+id/edittext_edit_fav_place_local_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:textAlignment="viewStart"
                android:ems="10"
                android:hint="@string/hint_edit_text_fav_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"

                />

            <TextView
                android:id="@+id/tv_folder_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/folder"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_fav_place_local_name" />



            <TextView
                android:id="@+id/tv_fav_place_local_folder_path_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="0dp"
                android:maxLines="3"
                android:hint="@string/hint_no_folder_selected_yet"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_folder_header"
                app:layout_constraintTop_toBottomOf="@+id/tv_folder_header"
                />



            <Button
                android:id="@+id/btn_edit_fav_place_local_choose_folder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="0dp"
                android:onClick="onSelectFolderClicked"
                android:text="@string/btn_text_select_folder"
                app:layout_constraintStart_toStartOf="@id/tv_fav_place_local_folder_path_info"
                app:layout_constraintEnd_toEndOf="@id/tv_fav_place_local_folder_path_info"
                app:layout_constraintTop_toBottomOf="@id/tv_fav_place_local_folder_path_info"
                android:contentDescription="@string/content_desc_btn_choose_folder"
                />
            <!--app:layout_constraintBottom_toBottomOf="@+id/edittext_edit_fav_place_local_folder_path_info"-->
            <!--app:layout_constraintTop_toTopOf="@+id/edittext_edit_fav_place_local_folder_path_info"-->




        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_edit_fav_place_local_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:onClick="onCancelClicked"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit_fav_place_local_ok"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btn_edit_fav_place_local_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="onOkClicked"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toEndOf="@id/btn_edit_fav_place_local_cancel" />



</android.support.constraint.ConstraintLayout>