<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PlacesManagerLocalFavoritesActivity">

    <TextView
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="8dp"
        android:text="@string/swipe_to_delete_click_to_edit"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_places_manager_local_favorites"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:clipToPadding="false"
        android:contentDescription="@string/content_desc_recycler_local_favorites"
        android:paddingBottom="40dp"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info" />


    <com.google.android.gms.ads.AdView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ad_view_places_manager_local_bottom"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_desc_ad"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_banner"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toStartOf="parent"
        ads:layout_constraintStart_toEndOf="parent" />
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_gravity="center|bottom"-->


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_new_local_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorAccent"
        android:clickable="true"
        android:contentDescription="@string/content_desc_fab_new_local_fav"
        android:focusable="true"
        android:onClick="onFabNewLocalFavoriteClicked"
        app:srcCompat="@drawable/ic_add_black_24dp"
        app:layout_constraintBottom_toTopOf="@id/ad_view_places_manager_local_bottom"
        app:layout_constraintEnd_toEndOf="parent" />
    <!--app:layout_constraintBottom_toTopOf="@id/included_ad"-->
    <!--android:layout_gravity="end|bottom"-->


    <View
        android:id="@+id/tag_local_favorite_id_in_DB"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

</android.support.constraint.ConstraintLayout>